# CMakeSeries

HelloWorldCMake/: CMakeLists.txt  main.cpp
